# Elixr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  alembic.ini  docker-compose.yml  ecosystem.config.js  pyproject.toml
alembic/: env.py
alembic/versions/: 01bffb70d97e_accounts_add_bank_accounts_credit_cards_.py  0a8339950b5f_transactions_add_transactions_.py  0b449bfcc88f_budgets_add_budget_goals_budget_.py  20260418_120000_identity_create_users_sessions.py  2eed9bab9c27_accounts_add_user_accounts_summary_view.py  3d053ced9c56_categorization_add_categories_rules_.py  3d17d3b12aac_investments_add_instruments_holdings_.py  56fc6b939d79_fx_add_fx_rates_table.py  5c87354ff282_categorization_add_categories_for_user_.py  69d337c9fb49_statements_add_statement_uploads_.py  7c1e29c7372f_transactions_add_transactions_with_.py  a707f5ee953b_earnings_add_earning_sources_earnings_.py  c1a2b3d4e5f6_notifications_add_notifications_table.py  c67a686e7eff_peers_add_peer_contacts_peer_balances_.py  d1e2f3a4b5c6_identity_make_code_hash_nullable.py  e1ee25db7b49_peers_add_peer_contacts_public_view.py  e2f3a4b5c6d7_add_cross_domain_foreign_keys.py  f7e3c329fa03_import__add_import_jobs_import_column_.py
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
client/docs/: design.md  (+3 more)
docs/: architecture.md  data-model.md  frontend-development-guidelines.md  integrations.md  project-structure.md
scripts/: install.sh
tests/: conftest.py
(+316 files in other folders)
